WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107469
Don't null out the IPC connection in ChildProcess:terminate
https://bugs.webkit.org/show_bug.cgi?id=107469
Summary
Don't null out the IPC connection in ChildProcess:terminate
Anders Carlsson
Reported
2013-01-21 12:15:43 PST
Don't null out the IPC connection in ChildProcess:terminate
Attachments
Patch
(1.46 KB, patch)
2013-01-21 12:19 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2013-01-21 12:19:40 PST
Created
attachment 183819
[details]
Patch
Anders Carlsson
Comment 2
2013-01-21 12:52:41 PST
Committed
r140351
: <
http://trac.webkit.org/changeset/140351
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug