Don't null out the IPC connection in ChildProcess:terminate https://bugs.webkit.org/show_bug.cgi?id=107469 <rdar://problem/13015294>

Reviewed by Dan Bernstein.

We already invalidate the connection, and Connection::sendMessage checks if a connection
is valid and bails if it isn't, so the only thing that nulling out the connection here does
is that it would force us to add random connection null checks everywhere.

* Shared/ChildProcess.cpp:
(WebKit::ChildProcess::terminate):

Canonical link: https://commits.webkit.org/125703@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140351 268f45cc-cd09-0410-ab3c-d52691b4dbfc